--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="noindex, nofollow" name="robots">
-    <meta content="IE=9" http-equiv="X-UA-Compatible"/>
+    <meta content="IE=9" http-equiv="X-UA-Compatible" />
     <title>Title</title>
-    <link href="styles.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet" />
 </head>
+
 <body>
+    <nav>
+        <h1>Photo App</h1>
+
+        <ul>
+            <li>username</li>
+            <li><a href="#">Sign out</a></li>
+        </ul>
+    </nav>
 
 </body>
+
 </html>
