undate card section

--- a/index.html
+++ b/index.html
@@ -6,19 +6,67 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="noindex, nofollow" name="robots">
     <meta content="IE=9" http-equiv="X-UA-Compatible" />
-    <title>Title</title>
+    <title>Photo App</title>
     <link href="styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 
 <body>
     <nav>
         <h1>Photo App</h1>
-
         <ul>
             <li>username</li>
             <li><a href="#">Sign out</a></li>
         </ul>
     </nav>
+    <main>
+        <section class="resturantList">
+            <div class="card">
+                <div>
+                    <h2>
+                        gibsonjack
+                        <i class="fas fa-ellipsis-h"> </i>
+                    </h2>
+                </div>
+                <img src="https://picsum.photos/id/10/360/260" alt="picture of nature" />
+                <div>
+                    <p>
+                        <i class="far fa-heart"></i>
+                        <i class="far fa-comment"></i>
+                        <i class="far fa-paper-plane"></i>
+                        <i class="far fa-bookmark"></i>
+                    </p>
+                    <p class="likesCount">30 likes</p>
+                    <p>
+                        <span class="username">gibsonjack</span>
+                        Here is a caption about the photo. Lorem ipsum dolor sit
+                        amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                        <a href="#">more</a>
+                    </p>
+                    <div class="comments">
+                        <p>
+                            <span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor
+                            sit
+                            amet, cu soluta concludaturque vim, summo voluptatibus ex sea.
+                            <br>
+                            <span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor
+                            sit
+                            amet, cu soluta concludaturque vim, summo voluptatibus ex sea.
+                        </p>
+                        <span class="comment_time">1 DAY AGO</span>
+                    </div>
+                    <div class="make_comments">
+                        <i class="far fa-smile"></i>
+                        <span class="make_comments_hint">Add a comment...</span>
+                        <a href="#">Post</a>
+                    </div>
+
+
+                </div>
+            </div>
+        </section>
+    </main>
+
 
 </body>
 
