--- a/index.html
+++ b/index.html
@@ -20,6 +20,28 @@
         </ul>
     </nav>
     <main>
+        <div class="storyList">
+            <div class="story">
+                <img src="https://static01.nyt.com/images/2020/11/20/multimedia/00Gates-1/00Gates-1-mediumSquareAt3X.jpg" alt="BillGates Avatar">
+                <p>BillGates</p>
+            </div>
+            <div class="story">
+                <img src="https://pbs.twimg.com/profile_images/982345946263515142/k_4l7LHR_400x400.jpg" alt="KevinSystrom Avatar">
+                <p>KevinSystrom</p>
+            </div>
+            <div class="story">
+                <img src="https://www.looktothestars.org/photo/12957-tim-cook/story_half_width.jpg" alt="TimCook Avatar">
+                <p>TimCook</p>
+            </div>
+            <div class="story">
+                <img src="https://pyxis.nymag.com/v1/imgs/15a/a77/b92f3a2d6de4ac79f869b4ab5300da4c8c-elon-musk.rsquare.w1200.jpg" alt="ElonMusk Avatar">
+                <p>ElonMusk</p>
+            </div>
+            <div class="story">
+                <img src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg" alt="MarkZuckerberg Avatar">
+                <p>MarkZuckerberg</p>
+            </div>
+        </div>
         <section class="resturantList">
             <div class="card">
                 <div>
@@ -38,20 +60,14 @@
                     </p>
                     <p class="likesCount">30 likes</p>
                     <p>
-                        <span class="username">gibsonjack</span>
-                        Here is a caption about the photo. Lorem ipsum dolor sit
-                        amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                        <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
                         <a href="#">more</a>
                     </p>
                     <div class="comments">
                         <p>
-                            <span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor
-                            sit
-                            amet, cu soluta concludaturque vim, summo voluptatibus ex sea.
+                            <span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.
                             <br>
-                            <span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor
-                            sit
-                            amet, cu soluta concludaturque vim, summo voluptatibus ex sea.
+                            <span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.
                         </p>
                         <span class="comment_time">1 DAY AGO</span>
                     </div>
