Minor Style fix on card

--- a/index.html
+++ b/index.html
@@ -38,25 +38,25 @@
                 <p>ElonMusk</p>
             </div>
             <div class="story">
-                <img src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg" alt="MarkZuckerberg Avatar">
-                <p>MarkZuckerberg</p>
+                <img src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg" alt="MarkZuck Avatar">
+                <p>MarkZuck</p>
             </div>
         </div>
         <section class="resturantList">
             <div class="card">
                 <div>
-                    <h2>
-                        gibsonjack
-                        <i class="fas fa-ellipsis-h"> </i>
+                    <h2 style="margin-left: 10px;">
+                        <a href="#" class="invisibleLink">gibsonjack</a>
+                        <a style="float:right; margin-right: 10px;" class="fas fa-ellipsis-h invisibleLink" href="#"> </a>
                     </h2>
                 </div>
                 <img src="https://picsum.photos/id/10/360/260" alt="picture of nature" />
                 <div>
                     <p>
-                        <i class="far fa-heart"></i>
-                        <i class="far fa-comment"></i>
-                        <i class="far fa-paper-plane"></i>
-                        <i class="far fa-bookmark"></i>
+                        <a href="#" class="far fa-heart invisibleLink"></a>
+                        <a href="#" class="far fa-comment invisibleLink"></a>
+                        <a href="#" class="far fa-paper-plane invisibleLink"></a>
+                        <a href="#" style="float:right;" class="far fa-bookmark invisibleLink"></a>
                     </p>
                     <p class="likesCount">30 likes</p>
                     <p>
@@ -64,20 +64,19 @@
                         <a href="#">more</a>
                     </p>
                     <div class="comments">
-                        <p>
-                            <span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.
-                            <br>
-                            <span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.
-                        </p>
-                        <span class="comment_time">1 DAY AGO</span>
+                        <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                        <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                        <p><span class="comment_time">1 DAY AGO</span></p>
+
+
                     </div>
-                    <div class="make_comments">
+                </div>
+                <div class="make_comments">
+                    <div class="make_comments_inside">
                         <i class="far fa-smile"></i>
                         <span class="make_comments_hint">Add a comment...</span>
-                        <a href="#">Post</a>
+                        <a style="float:right;" href="#">Post</a>
                     </div>
-
-
                 </div>
             </div>
         </section>
