--- a/index.html
+++ b/index.html
@@ -5,82 +5,89 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="noindex, nofollow" name="robots">
-    <meta content="IE=9" http-equiv="X-UA-Compatible" />
+    <meta content="IE=9" http-equiv="X-UA-Compatible"/>
     <title>Photo App</title>
-    <link href="styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link href="styles.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav>
-        <h1>Photo App</h1>
-        <ul>
-            <li>username</li>
-            <li><a href="#">Sign out</a></li>
-        </ul>
-    </nav>
-    <main>
-        <div class="storyList">
-            <div class="story">
-                <img src="https://static01.nyt.com/images/2020/11/20/multimedia/00Gates-1/00Gates-1-mediumSquareAt3X.jpg" alt="BillGates Avatar">
-                <p>BillGates</p>
+<nav>
+    <h1>Photo App</h1>
+    <ul>
+        <li>username</li>
+        <li><a href="#">Sign out</a></li>
+    </ul>
+</nav>
+<main>
+    <div class="storyList">
+        <div class="story">
+            <img alt="BillGates Avatar"
+                 src="https://static01.nyt.com/images/2020/11/20/multimedia/00Gates-1/00Gates-1-mediumSquareAt3X.jpg">
+            <p>BillGates</p>
+        </div>
+        <div class="story">
+            <img alt="KevinSystrom Avatar"
+                 src="https://pbs.twimg.com/profile_images/982345946263515142/k_4l7LHR_400x400.jpg">
+            <p>KevinSystrom</p>
+        </div>
+        <div class="story">
+            <img alt="TimCook Avatar" src="https://www.looktothestars.org/photo/12957-tim-cook/story_half_width.jpg">
+            <p>TimCook</p>
+        </div>
+        <div class="story">
+            <img alt="ElonMusk Avatar"
+                 src="https://pyxis.nymag.com/v1/imgs/15a/a77/b92f3a2d6de4ac79f869b4ab5300da4c8c-elon-musk.rsquare.w1200.jpg">
+            <p>ElonMusk</p>
+        </div>
+        <div class="story">
+            <img alt="MarkZuck Avatar"
+                 src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg">
+            <p>MarkZuck</p>
+        </div>
+    </div>
+    <section class="resturantList">
+        <div class="card">
+            <div>
+                <h2 style="margin-left: 10px;">
+                    <a class="invisibleLink" href="#">gibsonjack</a>
+                    <a class="fas fa-ellipsis-h invisibleLink" href="#" style="float:right; margin-right: 10px;"> </a>
+                </h2>
             </div>
-            <div class="story">
-                <img src="https://pbs.twimg.com/profile_images/982345946263515142/k_4l7LHR_400x400.jpg" alt="KevinSystrom Avatar">
-                <p>KevinSystrom</p>
+            <img alt="picture of nature" src="https://picsum.photos/id/10/360/260"/>
+            <div>
+                <p>
+                    <a class="far fa-heart invisibleLink" href="#"></a>
+                    <a class="far fa-comment invisibleLink" href="#"></a>
+                    <a class="far fa-paper-plane invisibleLink" href="#"></a>
+                    <a class="far fa-bookmark invisibleLink" href="#" style="float:right;"></a>
+                </p>
+                <p class="likesCount">30 likes</p>
+                <p>
+                    <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor sit
+                    amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
+                    <a href="#">more</a>
+                </p>
+                <div class="comments">
+                    <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit
+                        amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                    <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit
+                        amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
+                    <p><span class="comment_time">1 DAY AGO</span></p>
+
+
+                </div>
             </div>
-            <div class="story">
-                <img src="https://www.looktothestars.org/photo/12957-tim-cook/story_half_width.jpg" alt="TimCook Avatar">
-                <p>TimCook</p>
-            </div>
-            <div class="story">
-                <img src="https://pyxis.nymag.com/v1/imgs/15a/a77/b92f3a2d6de4ac79f869b4ab5300da4c8c-elon-musk.rsquare.w1200.jpg" alt="ElonMusk Avatar">
-                <p>ElonMusk</p>
-            </div>
-            <div class="story">
-                <img src="https://www.biography.com/.image/t_share/MTQyMDA0NDgwMzUzNzcyNjA2/mark-zuckerberg_gettyimages-512304736jpg.jpg" alt="MarkZuck Avatar">
-                <p>MarkZuck</p>
+            <div class="make_comments">
+                <div class="make_comments_inside">
+                    <i class="far fa-smile"></i>
+                    <span class="make_comments_hint">Add a comment...</span>
+                    <a href="#" style="float:right;">Post</a>
+                </div>
             </div>
         </div>
-        <section class="resturantList">
-            <div class="card">
-                <div>
-                    <h2 style="margin-left: 10px;">
-                        <a href="#" class="invisibleLink">gibsonjack</a>
-                        <a style="float:right; margin-right: 10px;" class="fas fa-ellipsis-h invisibleLink" href="#"> </a>
-                    </h2>
-                </div>
-                <img src="https://picsum.photos/id/10/360/260" alt="picture of nature" />
-                <div>
-                    <p>
-                        <a href="#" class="far fa-heart invisibleLink"></a>
-                        <a href="#" class="far fa-comment invisibleLink"></a>
-                        <a href="#" class="far fa-paper-plane invisibleLink"></a>
-                        <a href="#" style="float:right;" class="far fa-bookmark invisibleLink"></a>
-                    </p>
-                    <p class="likesCount">30 likes</p>
-                    <p>
-                        <span class="username">gibsonjack</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea...
-                        <a href="#">more</a>
-                    </p>
-                    <div class="comments">
-                        <p><span class="username">lizzie</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
-                        <p><span class="username">vanek97</span> Here is a caption about the photo. Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea.</p>
-                        <p><span class="comment_time">1 DAY AGO</span></p>
-
-
-                    </div>
-                </div>
-                <div class="make_comments">
-                    <div class="make_comments_inside">
-                        <i class="far fa-smile"></i>
-                        <span class="make_comments_hint">Add a comment...</span>
-                        <a style="float:right;" href="#">Post</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
+    </section>
+</main>
 
 
 </body>
